<resources>
    <string name="app_name">GradIT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_option_laboratories">Laboratories</string>
    <string name="navigation_option_schedule">Your schedule</string>
    <string name="navigation_option_groups">Groups</string>
    <string name="navigation_option_courses">Courses</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>

</resources>
