<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.licenta.sabina.gradit.Fragments.LoginFragment">

    <EditText
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="92dp"
        android:textColorHint="#8effffff"
        android:paddingEnd="32dp"
        android:background="@drawable/bubble"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:hint="@string/email"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:paddingEnd="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/bubble"
        android:textColorHint="#8effffff"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:hint="@string/password"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/forgot_password"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@layout/login_button_shape"
        android:gravity="center_vertical"
        android:paddingEnd="32dp"
        android:paddingStart="32dp"
        android:textColor="#8effffff"
        android:textAlignment="center"
        android:text="@string/login"
        />
</LinearLayout>